# ProjectDataStructure_Theater

./: CMakeLists.txt  Theater.drawio
com/theater/bl/: Business.cpp  Business.h
com/theater/bl/objects/Person/: Person.cpp  Person.h
com/theater/bl/objects/Seat/: Seat.cpp  Seat.h
com/theater/bl/structures/: List.cpp  List.h
com/theater/bl/structures/Node/: NodePerson.cpp  NodePerson.h  NodeSeat.cpp  NodeSeat.h
com/theater/bl/structures/Queue/: Queue.cpp  Queue.h
com/theater/bl/structures/Simple/: SimpleList.cpp  SimpleList.h
com/theater/bl/structures/Stack/: Stack.cpp  Stack.h
com/theater/const/: Constant.cpp  Constant.h
com/theater/tl/: Controller.cpp  Controller.h
com/theater/ui/: main.cpp
